2000-08-21  Steve Langasek <vorlon@dodds.net>

	* server/player.c, client/client.c, acconfig.h, configure.in:
	Use a distinct protocol version number for client-server
	negotiation, so that versions of the client and server that behave
	compatibly will be able to connect to one another.

2000-08-18  Andy Heroff <aheroff@mediaone.net>

	* client/settingscreen.c, client/gui.c, client/client.h,
	  client/Makefile.am: Added file. Added game settings screen.

2000-08-06  Jeff Breidenbach <jeff@alum.mit.edu>

	* debian/control: Tweak build dependencies (Debian bug #68516)

2000-08-01  Andy Heroff  <aheroff@mediaone.net>

	* client/gui.c: Quick change to VP target text to make less
	  ambiguous.

	* server/turn.c: Added debug for 'too-many' error. In the future,
	  all errors should be unique in some way (An identifier after the
	  description) so we can track the source of bugs.

2000-07-31  Andy Heroff  <aheroff@mediaone.net>

	* client/gui.c: Fixed resize bug once and for all. Added VP target
	  listing in the status bar.

2000-07-30  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/rules: Explicitly clean client/help/C/gnocatan to
	fix Debian bug #67287 (problem with the debian build of
	gnocatan-help). This is a non-beautiful solution.

2000-07-19  Bibek Sahu  <scorpio@dodds.net>

	* client/client.c, client/config-gnome.c, client/config-gnome.h,
	  client/connect.c, client/gnocatan.c, client/gui.c: Abstracted
	  getting/setting configuration values to be platform-agnostic. 
	  Still based on gnome-config, though; perhaps we want to stratify
	  the 'config path' into its various components?

2000-07-17  Andy Heroff  <aheroff@mediaone.net>

	* server/turn.c, server/develop.c, server/server.h: Fixed bug in
	  which the server would not check for a player victory after a
	  road building card had been played.

2000-07-09  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/control: First pass at Build-Depends: field. (presumably
	useful for the Debian autobuilders.)
